<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- ================= Parent POM ================= -->
    <parent>
        <groupId>com.cjlabs</groupId>
        <artifactId>cj-fmk-spring-boot3-starter</artifactId>
        <version>20251117_v1</version>
        <relativePath/>
    </parent>

    <!-- ================= 项目信息 ================= -->
    <artifactId>cambodia_info</artifactId>
    <version>20260302_v1</version>

    <name>cambodia_info</name>
    <description>Application based on CJ Framework Spring Boot 3</description>
    <url>https://github.com/jamie20241210/cambodia_info.git</url>

    <!-- ================= 项目属性 ================= -->
    <properties>
        <java.version>21</java.version>
    </properties>

    <!-- ================= 项目依赖 ================= -->
    <dependencies>
        <dependency>
            <groupId>com.cjlabs</groupId>
            <artifactId>fmk-boot</artifactId>
            <version>${fmk-boot.version}</version>
        </dependency>

        <!-- WebSocket 依赖 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>

        <!-- 测试依赖 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- ================= 构建配置 ================= -->
    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <!-- 编译配置 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>com.baomidou</groupId>
                            <artifactId>mybatis-plus-boot-starter</artifactId>
                            <version>${mybatis-plus.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Spring Boot 打包插件 -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot-maven-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        -XX:+EnableDynamicAgentLoading
                        -Xshare:off
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>